@@ -1,21 +1,21 @@
 (*
- ocaml-glpk - OCaml bindings to glpk
- Copyright (C) 2004 Samuel Mimram
-
- This program is free software; you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation; either version 2 of the License, or
- (at your option) any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program; if not, write to the Free Software
- Foundation, Inc., 59 Temple Place - Suite 330,
- Boston, MA 02111-1307, USA.
+ * ocaml-glpk - OCaml bindings to glpk
+ * Copyright (C) 2004-2006 Samuel Mimram
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
  *)
 
 (* $Id$ *)
@@ -153,10 +153,19 @@ external branch_and_bound : lp -> unit = "ocaml_glpk_integer"
 
 external warm_up : lp -> unit = "ocaml_glpk_warm_up"
 
-external set_message_level : lp -> int -> unit = "ocaml_glpk_set_message_level"
-
 external use_presolver : lp -> bool -> unit = "ocaml_glpk_use_presolver"
 
 external read_cplex : string -> lp = "ocaml_glpk_read_cplex"
 
 external write_cplex : lp -> string -> unit = "ocaml_glpk_write_cplex"
+
+external set_simplex_iteration_count : lp -> int -> unit = "ocaml_glpk_set_iteration_count"
+
+external get_simplex_iteration_count : lp -> unit = "ocaml_glpk_get_iteration_count"
+
+external _set_message_level : lp -> int -> unit = "ocaml_glpk_set_message_level"
+
+let set_message_level lp n =
+    if (n < 0 && n > 3) then
+        raise (Invalid_argument "set_message_level");
+    _set_message_level lp n
